Code Updated New

--- a/index2.html
+++ b/index2.html
@@ -46,7 +46,9 @@
 </nav>
  <!-- navbar end -->
 
-
+<!-- Write One Line for commit 2nd time -->
+<!-- Write One Line for commit 2nd time -->
+<!-- Write One Line for commit 2nd time -->
 
 <div id="banner-section">
     <div class="position-relative text-center">
