--- a/index6.html
+++ b/index6.html
@@ -1,15 +1,266 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="/css/style6.css"> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="/css/style6.css">
 </head>
+
 <body>
-    
+
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid ">
+            <a class="navbar-brand" href="#"><img src="./images/mainlogo.png"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center " id="navbarNav">
+                <ul class="navbar-nav ul-list mx-auto gap-5">
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Shop</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="icondiv d-flex align-items-center gap-4 me-5 .ul-list ">
+                <i class="bi bi-person-check"></i>
+                <i class="bi bi-search"></i>
+                <i class="bi bi-heart"></i>
+                <i class="bi bi-cart-check"></i>
+            </div>
+        </div>
+    </nav>
+    <!-- navbar end -->
+
+    <div id="banner-section ">
+        <div class="position-relative text-center pb-4">
+            <img src="./images/Rectangle 1.png" style="width:100%;height: 100%;">
+            <div class="position-absolute top-50 start-50 translate-middle">
+                <h1 class="shop ">Contact</h1>
+                <div class="d-flex">
+                    <p class="home p-1">Home</p><i class="bi bi-chevron-right"></i>
+                    <p class="shop0 p-1">Contact</p>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+
+
+    <div class="container my-5">
+        <div class="row g-3 justify-content-center align-items-center">
+<div class="text-center mb-5">
+     <h2 class="heading">Get In Touch With Us</h2>
+            <p class="heading-p pt-2">For More Information About Our Product & Services. Please Feel Free To Drop Us<br> An Email. Our Staff Always
+                Be There To Help You Out. Do Not Hesitate!</p>
+</div>
+
+            <!-- Left side (Info) -->
+            <div class="col-lg-5 col-md-6 justify-content-center align-items-center">
+                <div class="mb-5 d-flex">
+                    <i class="bi bi-geo-alt-fill fs-4 me-3"></i>
+                    <div>
+                        <h5 class="fw-semibold mb-1">Address</h5>
+                        <p class="mb-0" style="font-weight: 400; size: 16px;">
+                            236 5th SE Avenue, New<br>
+                            York NY10000, United States
+                        </p>
+                    </div>
+                </div>
+
+                <div class="mb-5 d-flex">
+                    <i class="bi bi-telephone-fill fs-4 me-3"></i>
+                    <div>
+                        <h5 class="fw-semibold mb-1">Phone</h5>
+                        <p class="mb-0 " style="font-weight: 400; size: 16px;">Mobile: +(84) 546-6789</p>
+                        <p class="mb-0 " style="font-weight: 400; size: 16px;">Hotline: +(84) 456-6789</p>
+                    </div>
+                </div>
+
+                <div class="mb-5 d-flex">
+                    <i class="bi bi-clock-fill fs-4 me-3"></i>
+                    <div>
+                        <h5 class="fw-semibold mb-1">Working Time</h5>
+                        <p class="mb-0 text-muted" style="font-weight: 400; size: 16px;">Monday–Friday: 9:00 – 22:00</p>
+                        <p class="mb-0 text-muted" style="font-weight: 400; size: 16px;">Saturday–Sunday: 9:00 – 21:00
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Right side (Form) -->
+            <div class="col-lg-5 col-md-6 pt-5 justify-content-center align-items-center">
+                <form>
+                    <div class="mb-4 ">
+                        <label for="name" class="form-label fw-semibold" style="font-weight: 500; size: 16px;">Your
+                            name</label>
+                        <input type="text" class="form-control custom-input rounded-3" id="name" placeholder="Abc">
+                    </div>
+
+                    <div class="mb-4">
+                        <label for="email" class="form-label fw-semibold" style="font-weight: 500; size: 16px;">Email
+                            address</label>
+                        <input type="email" class="form-control custom-input rounded-3" id="email" placeholder="Abc@def.com">
+                    </div>
+
+                    <div class="mb-4">
+                        <label for="subject" class="form-label fw-semibold"
+                            style="font-weight: 500; size: 16px;">Subject</label>
+                        <input type="text" class="form-control custom-input rounded-3" id="subject"
+                            placeholder="This is an optional">
+                    </div>
+
+                    <div class="mb-4">
+                        <label for="message" class="form-label fw-semibold"
+                            style="font-weight: 500; size: 16px;">Message</label>
+                        <textarea class="form-control rounded-3" id="message" rows="4"
+                            placeholder="Hi! I’d like to ask about"></textarea>
+                    </div>
+
+                    <button type="submit" class="btn px-5 py-2 rounded-2 "
+                        style="background-color: #B88E2F; color: aliceblue; font-weight: 400; size: 16px;">Submit</button>
+                </form>
+            </div>
+
+        </div>
+    </div>
+
+
+
+
+    <div class="last-div">
+        <div class="row justify-content-center  ">
+            <div class="col-md-3 ">
+                <div class="d-flex align-items-center">
+                    <div><img src="./images/trophy 1.png"></div>
+                    <div>
+                        <h4>High Quality</h4>
+                        <p>crafted from top materials</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 ">
+                <div class="d-flex align-items-center">
+                    <div><img src="./images/guarantee.png"></div>
+                    <div>
+                        <h4>Warranty Protection</h4>
+                        <p>Over 2 years</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 ">
+                <div class="d-flex align-items-center">
+                    <div><img src="./images/shipping.png"></div>
+                    <div>
+                        <h4>Free Shipping</h4>
+                        <p>Order over 150 $</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 ">
+                <div class="d-flex align-items-center">
+                    <div><img src="./images/customer-support.png"></div>
+                    <div>
+                        <h4 class="">24 / 7 Support</h4>
+                        <p>Dedicated support</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+
+
+
+
+
+    <hr class="mt-5">
+    <footer class="custom-footer py-5 mt-3">
+        <div class="container">
+            <div class="row gy-4 align-items-start">
+
+                <!-- Logo & Social -->
+                <div class="col-12 col-md-3">
+                    <h4 class="mb-3 fw-bold">Furniro.
+                    </h4>
+                    <p class="ft">400 University Drive Suite 200 Coral Gables,<br>
+                        FL 33134 USA</p>
+
+                </div>
+
+                <!-- Company -->
+                <div class="col-6 col-md-2">
+                    <h6 class="mb-3 ft-head">Links</h6>
+                    <ul class="list-unstyled ">
+                        <li><a href="#" class="footer-link">Home</a></li>
+                        <li><a href="#" class="footer-link">Shop</a></li>
+                        <li><a href="#" class="footer-link">About</a></li>
+                        <li><a href="#" class="footer-link">Contact</a></li>
+
+                    </ul>
+                </div>
+
+                <!-- Support -->
+                <div class="col-6 col-md-2">
+                    <h6 class="mb-3 ft-head">Help</h6>
+                    <ul class="list-unstyled ">
+                        <li><a href="#" class="footer-link">Payment Options</a></li>
+                        <li><a href="#" class="footer-link">Returns</a></li>
+
+                        <li><a href="#" class="footer-link">Privacy policy</a></li>
+
+                    </ul>
+                </div>
+
+                <!-- Newsletter -->
+                <div class="col-12 col-md-4">
+                    <h6 class="mb-3 ft-head">Newsletter</h6>
+                    <form>
+                        <div class="input-group footer-input">
+                            <input type="email" class="form-control border-0 border-bottom border-2 rounded-0 me-3 "
+                                placeholder="Your email address">
+                            <button class="btn border-0 border-bottom border-2 rounded-0 fw-bold px-3" type="button">
+                                SUBSCRIBE
+                            </button>
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+        </div>
+    </footer>
+    <hr class="" style="margin-right: 120px;margin-left: 75px">
+    <p class="lastp">2023 furino. All rights reverved</p>
+
+
+
+
+
 </body>
+
 </html>
