--- a/index7.html
+++ b/index7.html
@@ -1,15 +1,341 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="/css/style7.css"> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="/css/style7.css">
 </head>
+
 <body>
-    
+
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid ">
+            <a class="navbar-brand" href="#"><img src="./images/mainlogo.png"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center " id="navbarNav">
+                <ul class="navbar-nav ul-list mx-auto gap-5">
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Shop</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="icondiv d-flex align-items-center gap-4 me-5 .ul-list ">
+                <i class="bi bi-person-check"></i>
+                <i class="bi bi-search"></i>
+                <i class="bi bi-heart"></i>
+                <i class="bi bi-cart-check"></i>
+            </div>
+        </div>
+    </nav>
+    <!-- navbar end -->
+
+    <div id="banner-section ">
+        <div class="position-relative text-center pb-4">
+            <img src="./images/Rectangle 1.png" style="width:100%;height: 100%;">
+            <div class="position-absolute top-50 start-50 translate-middle">
+                <h1 class="shop ">Blog</h1>
+                <div class="d-flex">
+                    <p class="home p-1">Home</p><i class="bi bi-chevron-right"></i>
+                    <p class="shop0 p-1">Blog</p>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+
+    <div id="blog-section">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-6 mt-5">
+                    <img src="./images/Rectangle 68.png" style="max-width: 620px;">
+                    <div class="icon-div d-flex pt-4">
+                        <i class="bi bi-person-fill admin-icon pe-2"></i>
+                        <p class="admin-icon pe-4">Admin</p>
+                        <i class="bi bi-calendar-fill  admin-icon pe-2"></i>
+                        <p class="admin-icon pe-4">22 october 2022</p>
+                        <i class="bi bi-tag-fill  admin-icon pe-2"></i>
+                        <p class="admin-icon pe-4">Wood</p>
+
+                    </div>
+                    <h3>Going all-in with millennial design</h3>
+                    <p class="blog-p w-100 ">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Mus mauris vitae ultricies leo integer
+                        malesuada nunc. In nulla posuere sollicitudin aliquam ultrices. Morbi blandit cursus risus at
+                        ultrices mi tempus imperdiet. Libero enim sed faucibus turpis in. Cursus mattis molestie a
+                        iaculis at erat. Nibh cras pulvinar mattis nunc sed blandit libero. Pellentesque elit
+                        ullamcorper dignissim cras tincidunt. Pharetra et ultrices neque ornare aenean euismod
+                        elementum.</p>
+                    <p class="text-decoration-underline pb-2">Read more</p>
+
+
+
+                    <img src="./images/Rectangle 69.png" style="max-width: 620px;">
+                    <div class="icon-div d-flex pt-4">
+                        <i class="bi bi-person-fill admin-icon pe-2"></i>
+                        <p class="admin-icon pe-4">Admin</p>
+                        <i class="bi bi-calendar-fill  admin-icon pe-2"></i>
+                        <p class="admin-icon pe-4">22 october 2022</p>
+                        <i class="bi bi-tag-fill  admin-icon pe-2"></i>
+                        <p class="admin-icon pe-4">Wood</p>
+
+                    </div>
+                    <h3>Exploring new ways of decorating</h3>
+                    <p class="blog-p w-100 ">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Mus mauris vitae ultricies leo integer
+                        malesuada nunc. In nulla posuere sollicitudin aliquam ultrices. Morbi blandit cursus risus at
+                        ultrices mi tempus imperdiet. Libero enim sed faucibus turpis in. Cursus mattis molestie a
+                        iaculis at erat. Nibh cras pulvinar mattis nunc sed blandit libero. Pellentesque elit
+                        ullamcorper dignissim cras tincidunt. Pharetra et ultrices neque ornare aenean euismod
+                        elementum.</p>
+                    <p class="text-decoration-underline pb-2">Read more</p>
+
+
+
+
+                    <img src="./images/Rectangle 70.png" style="max-width: 620px;">
+                    <div class="icon-div d-flex pt-4">
+                        <i class="bi bi-person-fill admin-icon pe-2"></i>
+                        <p class="admin-icon pe-4">Admin</p>
+                        <i class="bi bi-calendar-fill  admin-icon pe-2"></i>
+                        <p class="admin-icon pe-4">22 october 2022</p>
+                        <i class="bi bi-tag-fill  admin-icon pe-2"></i>
+                        <p class="admin-icon pe-4">Wood</p>
+
+                    </div>
+                    <h3>Handmade pieces that took time to make</h3>
+                    <p class="blog-p w-100 ">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Mus mauris vitae ultricies leo integer
+                        malesuada nunc. In nulla posuere sollicitudin aliquam ultrices. Morbi blandit cursus risus at
+                        ultrices mi tempus imperdiet. Libero enim sed faucibus turpis in. Cursus mattis molestie a
+                        iaculis at erat. Nibh cras pulvinar mattis nunc sed blandit libero. Pellentesque elit
+                        ullamcorper dignissim cras tincidunt. Pharetra et ultrices neque ornare aenean euismod
+                        elementum.</p>
+                    <p class="text-decoration-underline pb-2">Read more</p>
+
+
+                </div>
+
+                <div class="col-lg-3 justify-content-center mt-5">
+                     <!-- Search box -->
+  <div class="search-box mb-4">
+    <input type="text" class="form-control" placeholder="Search...">
+    <i class="bi bi-search"></i>
+  </div>
+
+  <!-- Categories -->
+  <h5 class="category-title">Categories</h5>
+  <ul class="category-list">
+    <li><span>Crafts</span><span>2</span></li>
+    <li><span>Design</span><span>8</span></li>
+    <li><span>Handmade</span><span>7</span></li>
+    <li><span>Interior</span><span>1</span></li>
+    <li><span>Wood</span><span>6</span></li>
+  </ul>
+
+
+
+
+   <h5 class="fw-semibold mb-4 mt-5">Recent Posts</h5>
+
+  <div class="d-flex align-items-center mb-3">
+    <img src="./images/Rectangle 690.png" class="rounded me-3" style="width:65px;height:65px;object-fit:cover;" alt="">
+    <div>
+      <h6 class="mb-1 fs-6 fw-medium">Going all-in with millennial design</h6>
+      <small class="text-muted">03 Aug 2022</small>
+    </div>
+  </div>
+
+  <div class="d-flex align-items-center mb-3">
+    <img src="./images/Rectangle 691.png" class="rounded me-3" style="width:65px;height:65px;object-fit:cover;" alt="">
+    <div>
+      <h6 class="mb-1 fs-6 fw-medium">Exploring new ways of decorating</h6>
+      <small class="text-muted">03 Aug 2022</small>
+    </div>
+  </div>
+
+  <div class="d-flex align-items-center mb-3">
+    <img src="./images/Rectangle 692.png" class="rounded me-3" style="width:65px;height:65px;object-fit:cover;" alt="">
+    <div>
+      <h6 class="mb-1 fs-6 fw-medium">Handmade pieces that took time to make</h6>
+      <small class="text-muted">03 Aug 2022</small>
+    </div>
+  </div>
+
+  <div class="d-flex align-items-center mb-3">
+    <img src="./images/Rectangle 693.png" class="rounded me-3" style="width:65px;height:65px;object-fit:cover;" alt="">
+    <div>
+      <h6 class="mb-1 fs-6 fw-medium">Modern home in Milan</h6>
+      <small class="text-muted">03 Aug 2022</small>
+    </div>
+  </div>
+
+  <div class="d-flex align-items-center mb-3">
+    <img src="./images/Rectangle 694.png" class="rounded me-3" style="width:65px;height:65px;object-fit:cover;" alt="">
+    <div>
+      <h6 class="mb-1 fs-6 fw-medium">Colorful office redesign</h6>
+      <small class="text-muted">03 Aug 2022</small>
+    </div>
+  </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+    <!-- pagignation start -->
+
+    <div class="d-flex justify-content-center align-items-center mt-5 mb-5">
+
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                <li class="page-item number active"><a class="page-link" href="#">1</a></li>
+                <li class="page-item number"><a class="page-link" href="#">2</a></li>
+                <li class="page-item number"><a class="page-link" href="#">3</a></li>
+                <li class="page-item next"><a class="page-link" href="#">Next</a></li>
+            </ul>
+        </nav>
+
+    </div>
+
+    <!-- pagignation end -->
+
+    <div class="last-div">
+        <div class="row justify-content-center  ">
+            <div class="col-md-3 ">
+                <div class="d-flex align-items-center">
+                    <div><img src="./images/trophy 1.png"></div>
+                    <div>
+                        <h4>High Quality</h4>
+                        <p>crafted from top materials</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 ">
+                <div class="d-flex align-items-center">
+                    <div><img src="./images/guarantee.png"></div>
+                    <div>
+                        <h4>Warranty Protection</h4>
+                        <p>Over 2 years</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 ">
+                <div class="d-flex align-items-center">
+                    <div><img src="./images/shipping.png"></div>
+                    <div>
+                        <h4>Free Shipping</h4>
+                        <p>Order over 150 $</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 ">
+                <div class="d-flex align-items-center">
+                    <div><img src="./images/customer-support.png"></div>
+                    <div>
+                        <h4 class="">24 / 7 Support</h4>
+                        <p>Dedicated support</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <hr class="mt-5">
+    <footer class="custom-footer py-5 mt-3">
+        <div class="container">
+            <div class="row gy-4 align-items-start">
+
+                <!-- Logo & Social -->
+                <div class="col-12 col-md-3">
+                    <h4 class="mb-3 fw-bold">Furniro.
+                    </h4>
+                    <p class="ft">400 University Drive Suite 200 Coral Gables,<br>
+                        FL 33134 USA</p>
+
+                </div>
+
+                <!-- Company -->
+                <div class="col-6 col-md-2">
+                    <h6 class="mb-3 ft-head">Links</h6>
+                    <ul class="list-unstyled ">
+                        <li><a href="#" class="footer-link">Home</a></li>
+                        <li><a href="#" class="footer-link">Shop</a></li>
+                        <li><a href="#" class="footer-link">About</a></li>
+                        <li><a href="#" class="footer-link">Contact</a></li>
+
+                    </ul>
+                </div>
+
+                <!-- Support -->
+                <div class="col-6 col-md-2">
+                    <h6 class="mb-3 ft-head">Help</h6>
+                    <ul class="list-unstyled ">
+                        <li><a href="#" class="footer-link">Payment Options</a></li>
+                        <li><a href="#" class="footer-link">Returns</a></li>
+
+                        <li><a href="#" class="footer-link">Privacy policy</a></li>
+
+                    </ul>
+                </div>
+
+                <!-- Newsletter -->
+                <div class="col-12 col-md-4">
+                    <h6 class="mb-3 ft-head">Newsletter</h6>
+                    <form>
+                        <div class="input-group footer-input">
+                            <input type="email" class="form-control border-0 border-bottom border-2 rounded-0 me-3 "
+                                placeholder="Your email address">
+                            <button class="btn border-0 border-bottom border-2 rounded-0 fw-bold px-3" type="button">
+                                SUBSCRIBE
+                            </button>
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+        </div>
+    </footer>
+    <hr class="" style="margin-right: 120px;margin-left: 75px">
+    <p class="lastp">2023 furino. All rights reverved</p>
+
+
+
+
+
 </body>
+
 </html>
